--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -22,3 +22,19 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <div class="row">
+
+        <ng-container *ngFor="let item of productList">
+        
+            <div class="card col-md-3">
+            <img src="" alt="">
+            <h5>{{item.title}}</h5>
+            <p></p>
+            <p></p>
+            <button class="btn btn-primary">Add to cart</button>
+            </div>
+        </ng-container>
+    </div>
+</div>
