Add product container and some style

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -2,8 +2,6 @@ strong{
     font-size: 30px;
 }
 
-
-
 .form-control{
     border-radius: 3px;
     width: 600px;
@@ -17,7 +15,7 @@ strong{
     color: blue;
 }
 
-.fas{
+.fa-shipping-fast{
     font-size: 40px;
 }
 
