--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -23,18 +23,23 @@
     </div>
 </div>
 
+<!-- Contenedor de productos -->
+
 <div class="container">
     <div class="row">
+
+
 
         <ng-container *ngFor="let item of productList">
         
             <div class="card col-md-3">
-            <img src="" alt="">
-            <h5>{{item.title}}</h5>
-            <p></p>
-            <p></p>
+            <img src="{{item.image}}" alt="">
+            <h5 class="productTitle">{{item.name}}</h5>
+            <p class="itemDescription">{{item.description}}</p>
+            <p><strong>Price:</strong>${{item.price}}</p>
             <button class="btn btn-primary">Add to cart</button>
             </div>
         </ng-container>
+        
     </div>
 </div>
