Add service functions, routing and some cart function

--- a/src/app/component/cart/cart.component.html
+++ b/src/app/component/cart/cart.component.html
@@ -1,8 +1,41 @@
 <!-- Carrito con productos -->
 
 <ng-container *ngIf="true">
-
-
+<div class="container">
+    <div class="card-table">
+        <div class="cart-product">
+            <table class="table table-responsive">
+                <thead>
+                    <tr>
+                        <th>Sr.No</th>
+                        <th>Product Name</th>
+                        <th>Product Image</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                        <th></th>
+                        <th>Total</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Iphone</td>
+                        <td>Some Image</td>
+                        <td>this is branded phone</td>
+                        <th>50,000</th>
+                        <td>1</td>
+                        <td>50,000</td>
+                        <td>
+                            <button class="btn btn-danger"><i class="fas fa-trash-alt"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 </ng-container>
 
 <!-- Carrito vacio -->
