--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -11,9 +11,9 @@
             <span class="fas fa-search search-icon"></span>
 
         </div>
-        <button class="btn btn-primary">
+        <button routerLink="cart" class="btn btn-primary">
             <i style="font-size: 30px;" class="fas fa-cart-plus"></i>
-            <div class="badge bg-danger"></div>
+            <div class="badge bg-danger">{{totalItem}}</div>
         </button>
     </div>
 </header>
