--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -12,7 +12,7 @@ strong{
     z-index: 10;
     right: 58%;
     top: 22px;
-    color: blue;
+    color: green;
 }
 
 .fa-shipping-fast{
@@ -21,4 +21,8 @@ strong{
 
 .badge{
     font-size: 10px;
+}
+
+.btn-primary{
+    margin-left: 20px;
 }
