--- a/src/app/component/cart/cart.component.scss
+++ b/src/app/component/cart/cart.component.scss
@@ -38,6 +38,10 @@ h4,h6{
     border-radius: .25rem;
 }
 
+.cardImage{
+    width: 120px;
+}
+
 .center .btn{
     font-size: 14px !important;
     margin-top: 20px !important;
