--- a/src/app/component/product/product.component.html
+++ b/src/app/component/product/product.component.html
@@ -1,24 +1,28 @@
 <div class="card-top container-fluid">
     <div class="container d-flex">
         <div class="item">
-            <a> <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
-            <h6>All products</h6>
+            <a (click)="filter('')">
+                <img src="https://rukminim1.flixcart.com/flap/128/128/image/f15c02bfeb02d15d.png?q=100" alt="">
+                <h6>Todos los productos</h6>
             </a>
         </div>
         <div class="item">
-            <a> <img src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="">
-                <h6>Fashion</h6>
-                </a>
+            <a (click)="filter('electronics')">
+                <img src="https://rukminim1.flixcart.com/flap/128/128/image/69c6589653afdb9a.png?q=100" alt="">
+                <h6>Electrónica</h6>
+            </a>
         </div>
         <div class="item">
-            <a> <img src="https://rukminim1.flixcart.com/flap/128/128/image/82b3ca5fb2301045.png?q=100" alt="">
-                <h6>Electronics</h6>
-                </a>
+            <a (click)="filter('fashion')">
+                <img src="https://rukminim1.flixcart.com/flap/128/128/image/82b3ca5fb2301045.png?q=100" alt="">
+                <h6>Moda</h6>
+            </a>
         </div>
         <div class="item">
-            <a> <img class="jewelImg" src="https://rukminim1.flixcart.com/image/580/696/kkh6zrk0/jewellery-set/o/w/z/gt-ns-862-matushri-art-original-imafzt9teacakjyn.jpeg?q=50" alt="">
-                <h6>Jewllery</h6>
-                </a>
+            <a (click)="filter('jewelery')">
+                <img class="jewelImg" src="https://rukminim1.flixcart.com/image/580/696/kkh6zrk0/jewellery-set/o/w/z/gt-ns-862-matushri-art-original-imafzt9teacakjyn.jpeg?q=50" alt="">
+                <h6>Joyería</h6>
+            </a>
         </div>
     </div>
 </div>
@@ -27,17 +31,14 @@
 
 <div class="container">
     <div class="row">
-
-
-
-        <ng-container *ngFor="let item of productList">
+        <ng-container *ngFor="let item of filterCategory | filter:searchKey:'title' ">
         
             <div class="card col-md-3">
             <img src="{{item.image}}" alt="">
             <h5 class="productTitle">{{item.name}}</h5>
             <p class="itemDescription">{{item.description}}</p>
             <p><strong>Price:</strong>${{item.price}}</p>
-            <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
+            <button class="btn btn-success" (click)=addtocart(item)>Add to cart</button>
             </div>
         </ng-container>
         
