--- a/src/app/component/product/product.component.scss
+++ b/src/app/component/product/product.component.scss
@@ -24,8 +24,9 @@
 }
 
 .jewelImg {
-    width: 62px;
-    margin-top: 5px;
+
+    margin-top: 2px;
+    padding: 3px;
 }
 
 .productTitle{
@@ -58,4 +59,3 @@
     transition: 0.3s ease-in-out;
     transform: scale(1.1);
 }
-
